@@ -36,12 +36,22 @@ is specified.
 .B "\-c, \-\-count"
 Display the number of items instead of the items themselves.
 .TP
+.B "     \-\-no-herd"
+When used in conjunction with --package --dev, only display those packages
+with herd "no-herd".
+.TP
 .B "\-p, \-\-package"
 Display package information for the specified herd(s) or developer(s).
 .TP
 .B "\-d, \-\-dev"
 Display information for the specified developer(s).  If --package is specified,
 displays package information. Otherwise, displays herd information.
+.TP
+.B "\-m, \-\-metadata"
+Display information for the specified package(s)/categorie(s). A package name
+can be the name only (no category) only if there's not another package with the
+same name.  In that case you must specify the category.  On a small note, this
+option does not recognize most boolean flags (verbose, quiet, etc).
 .TP
 .B "\-H, \-\-herdsxml \fI<file>\fR"
 Specify the location of herds.xml.  See the \fBENVIRONMENT\fR section
@@ -70,6 +80,9 @@ all developers will be displayed.
 .TP
 .B "\-p, \-\-package" "\fI[ herd(s)/developer(s) ]\fR"
 Display package information for the specified herd(s) or developer(s).
+.TP
+.B "\-m, \-\-metadata" "\fI[ package(s) ]\fR"
+Display metadata information for the specified package(s).
 .TP
 If no options (non-option or not) are specified, @PACKAGE@ will display a summary of herds.xml statistics.  If --dev and --package are both specified, @PACKAGE@ will display all packages maintained by the specified developer.
 .SH EXAMPLES
